optimize question service test